--- a/PokeData/.gitignore
+++ b/PokeData/.gitignore
@@ -1,5 +1,6 @@
 # Dependencies
 node_modules/
+.pnpm-store/
 
 # Production build files
 /public/build/
@@ -15,6 +16,10 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# Package manager files
+package-lock.json
 
 # Editor directories and files
 .vscode/
