--- a/Portfolio/staticwebapp.config.json
+++ b/Portfolio/staticwebapp.config.json
@@ -1,11 +1,20 @@
 {
     "navigationFallback": {
-        "rewrite": "/index.html"
+      "rewrite": "/index.html",
+      "exclude": ["/images/*", "/*.ico", "/*.png"]
     },
-    "routes": [
-        {
-        "route": "/git-maber/*",
-        "rewrite": "/git-maber/index.html"
-        }
-    ]
+    "mimeTypes": {
+      ".js": "application/javascript",
+      ".css": "text/css",
+      ".html": "text/html",
+      ".json": "application/json",
+      ".map": "application/json",
+      ".txt": "text/plain",
+      ".ico": "image/x-icon",
+      ".svg": "image/svg+xml"
+    },
+    "globalHeaders": {
+      "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;",
+      "X-Content-Type-Options": "nosniff"
+    }
 }
