Fix build configuration for proper MIME types and routing

--- a/Portfolio/staticwebapp.config.json
+++ b/Portfolio/staticwebapp.config.json
@@ -1,23 +1,34 @@
 {
-    "navigationFallback": {
-      "rewrite": "/index.html",
-      "exclude": ["/images/*", "/*.ico", "/*.png"]
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/images/*", "/*.ico", "/*.png"]
+  },
+  "mimeTypes": {
+    ".js": "application/javascript",
+    ".css": "text/css",
+    ".html": "text/html",
+    ".json": "application/json",
+    ".map": "application/json",
+    ".txt": "text/plain",
+    ".ico": "image/x-icon",
+    ".svg": "image/svg+xml",
+    ".ttf": "font/ttf",
+    ".woff": "font/woff",
+    ".woff2": "font/woff2"
+  },
+  "globalHeaders": {
+    "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; img-src 'self' data:;",
+    "X-Content-Type-Options": "nosniff"
+  },
+  "routes": [
+    {
+      "route": "/git-maber/_app/*",
+      "rewrite": "/_app/*",
+      "statusCode": 200
     },
-    "mimeTypes": {
-      ".js": "application/javascript",
-      ".css": "text/css",
-      ".html": "text/html",
-      ".json": "application/json",
-      ".map": "application/json",
-      ".txt": "text/plain",
-      ".ico": "image/x-icon",
-      ".svg": "image/svg+xml",
-      ".ttf": "font/ttf",
-      ".woff": "font/woff",
-      ".woff2": "font/woff2"
-    },
-    "globalHeaders": {
-      "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; img-src 'self' data:;",
-      "X-Content-Type-Options": "nosniff"
+    {
+      "route": "/*",
+      "rewrite": "/index.html"
     }
+  ]
 }
