Fix routing rules in staticwebapp.config.json

--- a/Portfolio/staticwebapp.config.json
+++ b/Portfolio/staticwebapp.config.json
@@ -23,8 +23,7 @@
   "routes": [
     {
       "route": "/git-maber/_app/*",
-      "rewrite": "/_app/*",
-      "statusCode": 200
+      "rewrite": "/_app/*"
     },
     {
       "route": "/*",
