--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -14,7 +14,8 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "gh-pages": "^6.0.0",
     "svelte": "^4.2.7",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-preload": "^0.4.2"
   },
   "type": "module"
 }
