serve -> rewrite in staticwebapp.config.json

--- a/Portfolio/staticwebapp.config.json
+++ b/Portfolio/staticwebapp.config.json
@@ -23,11 +23,11 @@
   "routes": [
     {
       "route": "/_app/*",
-      "serve": "/_app/*"
+      "rewrite": "/_app/*"
     },
     {
       "route": "/static/*",
-      "serve": "/static/*"
+      "rewrite": "/static/*"
     },
     {
       "route": "/*",
