--- a/Portfolio/staticwebapp.config.json
+++ b/Portfolio/staticwebapp.config.json
@@ -30,6 +30,10 @@
       "rewrite": "/static/*"
     },
     {
+      "route": "/images/*",
+      "rewrite": "/images/*"
+    },
+    {
       "route": "/*",
       "rewrite": "/index.html"
     }
