Modify staticwebapp.config.json to include a route to explicitly handle image files. Modified CSS in +page.svelte to use a path that matches how Azure might be serving the files, i.e. plain relative path. Updated JavaScript bgElement to match.

--- a/Portfolio/staticwebapp.config.json
+++ b/Portfolio/staticwebapp.config.json
@@ -30,6 +30,10 @@
       "serve": "/static/*"
     },
     {
+      "route": "/images/*",
+      "serve": "/images/*"
+    },
+    {
       "route": "/*",
       "rewrite": "/index.html"
     }
