--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -12,8 +12,13 @@
     "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.16",
     "gh-pages": "^6.0.0",
+    "postcss": "^8.4.31",
     "svelte": "^4.2.7",
+    "tailwindcss": "^3.3.5",
     "vite": "^5.0.0",
     "vite-plugin-preload": "^0.4.2"
   },
