--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.0",
@@ -18,20 +21,28 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/svelte": "^5.2.7",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "@typescript-eslint/parser": "^8.29.1",
+    "@vitest/coverage-v8": "^3.1.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-svelte": "^3.5.1",
     "gh-pages": "^6.0.0",
+    "jsdom": "^26.0.0",
     "postcss": "^8.4.31",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "svelte": "^4.2.7",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0",
-    "vite-plugin-preload": "^0.4.2"
+    "vite-plugin-preload": "^0.4.2",
+    "vitest": "^3.1.1"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.39.0"
+  }
 }
