--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -41,8 +41,5 @@
     "vite-plugin-preload": "^0.4.2",
     "vitest": "^3.1.1"
   },
-  "type": "module",
-  "dependencies": {
-    "@rollup/rollup-win32-x64-msvc": "^4.39.0"
-  }
+  "type": "module"
 }
