--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -39,7 +39,8 @@
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0",
     "vite-plugin-preload": "^0.4.2",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "cssnano": "^6.0.1"
   },
   "type": "module"
 }
