--- a/PokeData/package.json
+++ b/PokeData/package.json
@@ -14,13 +14,15 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-node-resolve": "11.0.0",
+    "@rollup/plugin-replace": "6.0.2",
+    "dotenv": "16.5.0",
+    "rimraf": "3.0.2",
     "rollup": "2.30.0",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-livereload": "2.0.0",
     "rollup-plugin-svelte": "7.0.0",
     "rollup-plugin-terser": "7.0.0",
-    "svelte": "3.38.3",
-    "rimraf": "3.0.2"
+    "svelte": "3.38.3"
   },
   "dependencies": {
     "sirv-cli": "1.0.0"
