--- a/PokeData/.github/workflows/azure-static-web-app.yml
+++ b/PokeData/.github/workflows/azure-static-web-app.yml
@@ -8,6 +8,7 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches:
       - main
+  workflow_dispatch:  # Add this to enable manual triggering
 
 jobs:
   build_and_deploy_job:
