--- a/PokeData/.github/workflows/azure-static-web-app.yml
+++ b/PokeData/.github/workflows/azure-static-web-app.yml
@@ -31,6 +31,46 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       
+      - name: Debug Environment Variables
+        run: |
+          echo "Checking environment variables (safely)..."
+          echo "API_BASE_URL exists: ${{ secrets.API_BASE_URL != '' }}"
+          echo "API_KEY exists: ${{ secrets.API_KEY != '' }}"
+          echo "API_SUBSCRIPTION_KEY exists: ${{ secrets.API_SUBSCRIPTION_KEY != '' }}"
+          
+          # Create a temporary debug script
+          echo "console.log('GitHub Actions Environment Check');" > debug-env.js
+          echo "const apiBaseUrl = process.env.API_BASE_URL || 'not-set';" >> debug-env.js
+          echo "const apiKey = process.env.API_KEY || 'not-set';" >> debug-env.js
+          echo "const apiSubKey = process.env.API_SUBSCRIPTION_KEY || 'not-set';" >> debug-env.js
+          echo "console.log('API_BASE_URL exists:', apiBaseUrl !== 'not-set');" >> debug-env.js
+          echo "console.log('API_BASE_URL length:', apiBaseUrl.length);" >> debug-env.js
+          echo "console.log('API_KEY exists:', apiKey !== 'not-set');" >> debug-env.js
+          echo "console.log('API_KEY length:', apiKey.length);" >> debug-env.js
+          echo "console.log('API_SUBSCRIPTION_KEY exists:', apiSubKey !== 'not-set');" >> debug-env.js
+          echo "console.log('API_SUBSCRIPTION_KEY length:', apiSubKey.length);" >> debug-env.js
+          
+          # Run the debug script with environment variables
+          echo "Running Node.js environment check..."
+        env:
+          API_BASE_URL: ${{ secrets.API_BASE_URL }}
+          API_KEY: ${{ secrets.API_KEY }}
+          API_SUBSCRIPTION_KEY: ${{ secrets.API_SUBSCRIPTION_KEY }}
+      
+      - name: Execute Environment Debug Script
+        run: node debug-env.js
+        env:
+          API_BASE_URL: ${{ secrets.API_BASE_URL }}
+          API_KEY: ${{ secrets.API_KEY }}
+          API_SUBSCRIPTION_KEY: ${{ secrets.API_SUBSCRIPTION_KEY }}
+      
+      - name: Debug Rollup Config
+        run: |
+          echo "Checking Rollup configuration..."
+          grep -A 20 "replace(" rollup.config.js || echo "replace plugin not found in rollup.config.js"
+          echo "Checking for environment variable usage in apiConfig.js..."
+          grep -A 10 "process.env" src/data/apiConfig.js || echo "process.env not found in apiConfig.js"
+      
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
