Reverting changes to PokeData.

--- a/PokeData/.npmrc
+++ b/PokeData/.npmrc
@@ -4,5 +4,5 @@ audit=false
 loglevel=error
 progress=false
 strict-peer-dependencies=false
-node-linker=hoisted
-shamefully-hoist=true
+node-linker=isolated
+shamefully-hoist=false
