--- a/PokeData/.env.example
+++ b/PokeData/.env.example
@@ -3,9 +3,8 @@ PORT=3000
 HOST=localhost
 
 # API configuration
-API_BASE_URL=https://maber-apim-test.azure-api.net/pokedata-api/v0
-API_KEY=your_jwt_token_here
-API_SUBSCRIPTION_KEY=your_subscription_key_here
+API_KEY=your_api_key_here
+API_BASE_URL=https://api.example.com/v1
 
 # Feature flags
 ENABLE_CACHING=true
