--- a/PokeData/package.json
+++ b/PokeData/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "description": "Pokémon Card Price Checker built with Svelte",
   "private": true,
-  "type": "commonjs",
   "scripts": {
-    "build": "npx rollup -c rollup.config.cjs",
-    "dev": "npx rollup -c rollup.config.cjs -w",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "start": "sirv public --no-clear --port 3000",
     "prod-install": "pnpm install --prod",
     "clean": "rimraf node_modules .pnpm-store pnpm-lock.yaml",
@@ -15,15 +14,13 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-node-resolve": "11.0.0",
-    "@rollup/plugin-replace": "6.0.2",
-    "dotenv": "16.5.0",
-    "rimraf": "3.0.2",
     "rollup": "2.30.0",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-livereload": "2.0.0",
     "rollup-plugin-svelte": "7.0.0",
     "rollup-plugin-terser": "7.0.0",
-    "svelte": "3.38.3"
+    "svelte": "3.38.3",
+    "rimraf": "3.0.2"
   },
   "dependencies": {
     "sirv-cli": "1.0.0"
