Fix LiveReload timeout issue with comprehensive solution

--- a/PokeData/public/staticwebapp.config.json
+++ b/PokeData/public/staticwebapp.config.json
@@ -3,10 +3,25 @@
     {
       "route": "/livereload.js*",
       "statusCode": 404
+    },
+    {
+      "route": "*/livereload.js*",
+      "statusCode": 404
+    },
+    {
+      "route": "*/livereload/*",
+      "statusCode": 404
+    },
+    {
+      "route": "/sockjs-node/*",
+      "statusCode": 404
     }
   ],
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": ["/images/*.{png,jpg,gif,ico}", "/*.css", "/*.js"]
+  },
+  "globalHeaders": {
+    "Cache-Control": "max-age=3600"
   }
 }
