Fix staticwebapp.config.json routes to have only one wildcard per route

--- a/PokeData/public/staticwebapp.config.json
+++ b/PokeData/public/staticwebapp.config.json
@@ -5,11 +5,19 @@
       "statusCode": 404
     },
     {
-      "route": "*/livereload.js*",
+      "route": "*/livereload.js",
       "statusCode": 404
     },
     {
-      "route": "*/livereload/*",
+      "route": "/*/livereload.js",
+      "statusCode": 404
+    },
+    {
+      "route": "*/livereload",
+      "statusCode": 404
+    },
+    {
+      "route": "/livereload/*",
       "statusCode": 404
     },
     {
