--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -6,7 +6,6 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -27,10 +26,10 @@
     "@typescript-eslint/parser": "^8.29.1",
     "@vitest/coverage-v8": "^3.1.1",
     "autoprefixer": "^10.4.16",
+    "cssnano": "^6.0.1",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-svelte": "^3.5.1",
-    "gh-pages": "^6.0.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.4.31",
     "prettier": "^3.5.3",
@@ -39,8 +38,7 @@
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0",
     "vite-plugin-preload": "^0.4.2",
-    "vitest": "^3.1.1",
-    "cssnano": "^6.0.1"
+    "vitest": "^3.1.1"
   },
   "type": "module"
 }
